--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <script>
       // YOU DO NOT NEED TO EDIT THIS CODE
       if (!/(&|\?)username=/.test(window.location.search)) {
@@ -20,13 +21,27 @@
     </script>
     <!-- your scripts -->
     <script src="env/config.js"></script>
-    <script src="scripts/app.js"></script>
   </head>
   <body>
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <div id='rooms'>
+        Room:
+        <select id="roomSelect">
+          <option value="blank"></option>
+          <option id="option-create-room" SELECTED value="createRoom">Create a new room</option>
+          <option value="lobby">lobby</option>
+          <input type="text" name="room" size="10" id="input-room-name"/>
+        </select>
+      </div>
+      <form action="#" id="send" method="post">
+        Message:
+        <input type='text' name="message" id="message"/>
+        <button type="submit" name="submit" class="submit">Submit</button>
+      </form>
     </div>
     <div id="chats"></div>
+    <script src="scripts/app.js"></script>
   </body>
 </html>
